rendered/envs/zoo/adguard-home/namespace-adguard-home.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: adguard-home
  namespace: adguard-home
