rendered/envs/zoo/adguard-home/service-adguard-dns-udp.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
    metallb.universe.tf/allow-shared-ip: adguard-home
  name: adguard-dns-udp
  namespace: adguard-home
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.178.222
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
  selector:
    app.kubernetes.io/instance: adguard-home
    app.kubernetes.io/name: adguard-home
  type: LoadBalancer
