rendered/envs/zoo/adguard-home/service-adguard-home-http.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: adguard-home-http
  namespace: adguard-home
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: adguard-home
    app.kubernetes.io/name: adguard-home
  type: ClusterIP
